# app

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  PI_ALGO_PROMPT.md  README.md  SENTINEL_EDGE_ALGO_SPEC.md  TECHNICAL_SPECIFICATION.md  build.gradle.kts  local.properties  pyproject.toml  requirements.txt  settings.gradle.kts
android_app/: README.md  settings.gradle.kts
android_app/app/: build.gradle.kts  proguard-rules.pro
android_app/app/src/main/: AndroidManifest.xml
android_app/app/src/main/res/drawable/: bg_badge.xml  bg_error_card.xml  bg_header_gradient.xml  ic_launcher_foreground.xml
android_app/app/src/main/res/layout/: activity_event_history.xml  activity_live_camera.xml  activity_login.xml  activity_main.xml  item_alert.xml  item_device.xml  item_event_history.xml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
deploy/: nri-plot-sentinel-pi.service
gradle/: libs.versions.toml
mobile_app/: main.py  requirements.txt
mobile_app/app/: config.py
mobile_app/app/network/: api_client.py  auth_manager.py  offline_queue.py  tls_pinning.py
mobile_app/app/security/: device_seed.py  secure_store.py
mobile_app/app/services/: monitoring_service.py
mobile_app/app/ui/: main.kv
src/pi_client/: __init__.py  __main__.py  api_transport.py  camera_adapter.py  camera_capture.py  config.py  event_classifier.py  event_queue.py  event_uploader.py  hardware.py  heartbeat_sender.py  logging_config.py  main.py  models.py  session_manager.py
(+97 files in other folders)
