[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nri-plot-sentinel-pi-client"
version = "0.1.0"
description = "Raspberry Pi gateway client for NRI Plot Sentinel"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.32.3",
  "psutil>=5.9.8",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
